--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header class="header-banner">
         <div class="banner-title">
-            <h1 class="banner-content">Let's make <br> beautiful flowers a <br> part of your life.</h1>
-            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <h1 class="banner-content">Let's make <br> beautiful flowers<br>a part of your life.</h1>
+            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. <br> The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
             <button class="btn-primary"><i class=""></i>shop now</button>
         </div>
         <div>
@@ -41,8 +41,8 @@
                 </div>
                 <div class="ancor">
                 <a href="">Pink Flower Tree</a>
-                <a href="">Pink Flower Tree</a>
-                <a href="">Pink Flower Tree</a>
+                <a href="">Pink Fllower Tree</a>
+                <a href="">Pink Fllower Tree</a>
                 </div>
             </saction>
 
@@ -50,7 +50,7 @@
             <saction class="saction-2">
                 <div class="banner0">
                     <h3>Hot Deal ! Sale Up To 25% <span style="color: red;">Off</span></h3>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.will be distracted by the readable content of a page when looking at its layout.</p>
 
                     <button class="btn-primary">Sign Up</button>
                 </div>
@@ -65,7 +65,7 @@
             <saction>
                 <div class="saction-3">
                     <h2>Instagram</h2>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.will be distracted by the readable content of a page when looking at its layout</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.will be distracted by the readable content of a page when looking at its layout will be distracted by the readable content of a page when looking at its layout</p>
                 </div>
                 <div class="image-3">
                     <img src="images/Flower 01.png" alt="">
